--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: "3"
 services:
   client:
-    image: "thomfb3/multi-client-10-14"
+    image: "thomfb3/multi-client"
     mem_limit: 128m
     hostname: client
   server:
-    image: "thomfb3/multi-server-10-14"
+    image: "thomfb3/multi-server"
     mem_limit: 128m
     hostname: api
     environment:
@@ -17,14 +17,14 @@ services:
       - PGPASSWORD=$PGPASSWORD
       - PGPORT=$PGPORT
   worker:
-    image: "thomfb3/multi-worker-10-14"
+    image: "thomfb3/multi-worker"
     mem_limit: 128m
     hostname: worker
     environment:
       - REDIS_HOST=$REDIS_HOST
       - REDIS_PORT=$REDIS_PORT
   nginx:
-    image: "thomfb3/multi-nginx-10-14"
+    image: "thomfb3/multi-nginx"
     mem_limit: 128m
     hostname: nginx
     ports:
